bugfix: show debug window
debug window was invisible due to javascript error

--- a/experiments/mouse_kalman/mouse_kalman.css
+++ b/experiments/mouse_kalman/mouse_kalman.css
@@ -1,6 +1,9 @@
 body {
     cursor: none;
 }
+em {
+    font-weight:bold;
+}
 #cursor {
     position: absolute;
     left: 0;
